--- a/demo/index.html
+++ b/demo/index.html
@@ -51,7 +51,7 @@
     </div>
     <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.2.1/weui.min.js"></script>
     <script type="module">
-        import ColorContrast from '../dist/main';
+        import ColorContrast from '../dist/main.js';
 
         var timer;
         var offsetEl = document.getElementById("offset");
