--- a/demo/index.html
+++ b/demo/index.html
@@ -51,7 +51,7 @@
     </div>
     <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.2.1/weui.min.js"></script>
     <script type="module">
-        import {AdjustTextContrast} from '../dist/colorContrast.js';
+        import ColorContrast from '../dist/colorContrast.js';
 
         var timer;
         var offsetEl = document.getElementById("offset");
@@ -66,7 +66,7 @@
                 timer = setTimeout(() => {
                     Array.from(document.querySelectorAll(".i")).forEach(el => {
                         var textColorStr = el.getAttribute("data-textcolor");
-                        const ret = AdjustTextContrast(textColorStr,bgColorStr,limitBrightness);
+                        const ret = ColorContrast.AdjustTextContrast(textColorStr,bgColorStr,limitBrightness);
                         if(ret){
                             el.style.borderBottomColor = "red";
                             el.style.borderLeftColor = ret;
