--- a/demo/index.html
+++ b/demo/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.2.1/weui.min.js"></script>
-    <script src="./t.js"></script>
+    <script src="./t.js" type="module"></script>
     <script type="module">
         import ColorContrast from '../dist/colorContrast.js';
 
