--- a/demo/weui.html
+++ b/demo/weui.html
@@ -25,6 +25,9 @@
             box-sizing: border-box;
             z-index: 1
         }
+        .weui-msg__opr-area {
+            margin-bottom: 96px;
+        }
     </style>
     <script src=https://res.wx.qq.com/t/wx_fed/cdn_libs/res/vue/2.6.11/vue.min.js></script>
     <title></title>
@@ -35,7 +38,7 @@
         <div class=page>
             <div v-if=init class=weui-msg>
                 <div class=weui-msg__text-area>
-                    <h2 class=weui-msg__title>jump</h2>
+                    <h2 class=weui-msg__title>jump1</h2>
                     <p class=weui-msg__desc v-text=submsg></p>
                 </div>
                 <div class=weui-msg__opr-area>
