--- a/demo/weui.html
+++ b/demo/weui.html
@@ -33,9 +33,9 @@
 <body ontouchstart>
     <div id=app>
         <div class=page>
-            <div v-if=init class=weui-msg>
+            <div class=weui-msg>
                 <div class=weui-msg__text-area>
-                    <h2 class=weui-msg__title>jump3</h2>
+                    <h2 class=weui-msg__title>jump4</h2>
                     <p class=weui-msg__desc v-text=submsg></p>
                 </div>
                 <div class=weui-msg__opr-area>
